Add CSV upload, USD/CAD toggle, sales support, and update donate links

--- a/forresthodl.html
+++ b/forresthodl.html
@@ -554,7 +554,7 @@
                </div>
                <div class="affiliate-item">
                  <h4>How to support</h4>
-                 <a href="https://coinos.io/bitcoinnotcryptoshow" target="_blank" class="affiliate-link">Donate</a>
+                 <a href="https://coinos.io/plebtools" target="_blank" class="affiliate-link">Donate</a>
                </div>
              </div>
           </div>
