Add press release tool with image editing capabilities- Created press-release.html with canvas-based text overlay tool- Added 6 custom fonts (Righteous, Seymour One, Press Start 2P, Audiowide, Goldman, Zen Dots)- Implemented image upload/download functionality with 6 default pleb release backgrounds- Added sticky/floating image preview for better UX- Updated home page with press release tool buttons and feature card- Added URL rewriting rule in .htaccess for clean URLs- Default text: 'Acquires and achieves BTC Yield of % YTD; Now Holds'- Features: font selection, color picker, position controls, letter spacing

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   <title>Plebtools - Bitcoin Treasury & Portfolio Tracking</title>
   <link rel="icon" type="image/x-icon" href="images/channels4_profile.jpg">
   <link rel="stylesheet" href="styles.css?v=3">
+  
   <style>
     /* Home page specific styles */
     .hero-section {
@@ -549,6 +550,7 @@
         <div class="hero-buttons">
           <a href="treasury.html" class="hero-btn primary">Treasury Tracker</a>
           <a href="btc-buy-tracker.html" class="hero-btn">BTC Portfolio Tracker</a>
+          <a href="press-release" class="hero-btn">Press Release Tool</a>
         </div>
       </div>
     </section>
@@ -578,13 +580,25 @@
 
 
         <div class="feature-card">
+          <span class="feature-icon">📰</span>
+          <h3 class="feature-title">Press Release Tool</h3>
+          <p class="feature-description">
+            Create professional press release images with custom text overlays. 
+            Choose from multiple fonts, colors, and backgrounds. Perfect for 
+            Bitcoin announcements and corporate communications.
+          </p>
+          <a href="press-release" class="feature-btn">Create Press Release</a>
+        </div>
+
+        <div class="feature-card">
           <span class="feature-icon">🔒</span>
           <h3 class="feature-title">Privacy First</h3>
           <p class="feature-description">
             All data stored locally in your browser. No accounts required, 
             no data collection, complete privacy and control over your information.
+            As an open source project, you can clone the repository and run it 
+            locally on your own machine for maximum security.
           </p>
-          <a href="/treasury" class="feature-btn">Learn More</a>
         </div>
 
         <div class="feature-card">
