Add covered call tracker with market price integration and chart improvements

--- a/treasury.html
+++ b/treasury.html
@@ -563,10 +563,12 @@
           <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
           <h1 class="logo">Plebtools</h1>
         </div>
-        <ul class="nav-links">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="btc-buy-tracker.html">Bitcoin Buy Tracker</a></li>
-        </ul>
+        <div class="nav-links">
+          <a href="home">Home</a>
+          <a href="btc-buy-tracker">Portfolio</a>
+          <a href="covered-call-tracker">Covered Calls</a>
+          <a href="press-release">Press Release</a>
+        </div>
       </div>
     </nav>
   </header>
@@ -657,20 +659,20 @@
             <p style="font-size: 0.9rem; color: #666; margin-bottom: 1.5rem;">These are affiliate/discount links</p>
             <div class="affiliate-links">
               <div class="affiliate-item">
-                <h4>Where I buy</h4>
+                <h4>Where to buy</h4>
                 <a href="https://bitcoinwell.com/referral/bitcoinnotcrypto" target="_blank" class="affiliate-link">Bitcoin Well</a>
               </div>
               <div class="affiliate-item">
-                <h4>How I store</h4>
+                <h4>Where to store</h4>
                 <a href="https://store.blockstream.com/?code=DTzyNKA5Q8Sz" target="_blank" class="affiliate-link">Blockstream Jade</a>
               </div>
               <div class="affiliate-item">
-                <h4>How I protect</h4>
+                <h4>How to protect</h4>
                 <a href="https://www.stampseed.com/" target="_blank" class="affiliate-link">Stamp Seed</a>
                 <p class="discount-code">USE CODE: BTCNOTCRYPTO15 for 15% off</p>
               </div>
               <div class="affiliate-item">
-                <h4>How I validate</h4>
+                <h4>How to validate</h4>
                 <a href="https://store.start9.com/" target="_blank" class="affiliate-link">Start9</a>
                 <p class="discount-code">CODE: BNC5 for 5% off</p>
               </div>
