--- a/home.html
+++ b/home.html
@@ -534,6 +534,12 @@
           <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
           <h1 class="logo">Plebtools</h1>
         </div>
+        <div class="nav-links">
+          <a href="treasury">Treasury</a>
+          <a href="btc-buy-tracker">Portfolio</a>
+          <a href="covered-call-tracker">Covered Calls</a>
+          <a href="press-release">Press Release</a>
+        </div>
       </div>
     </nav>
   </header>
@@ -550,6 +556,7 @@
         <div class="hero-buttons">
           <a href="treasury.html" class="hero-btn primary">Treasury Tracker</a>
           <a href="btc-buy-tracker.html" class="hero-btn">BTC Portfolio Tracker</a>
+          <a href="covered-call-tracker" class="hero-btn">Covered Call Tracker</a>
           <a href="press-release" class="hero-btn">Press Release Tool</a>
         </div>
       </div>
@@ -578,6 +585,15 @@
           <a href="btc-buy-tracker.html" class="feature-btn">View Portfolio Tracker</a>
         </div>
 
+        <div class="feature-card">
+          <span class="feature-icon">📈</span>
+          <h3 class="feature-title">Covered Call Tracker</h3>
+          <p class="feature-description">
+            Track covered call trades and analyze portfolio performance. Monitor cost basis 
+            adjustments, premium income, and visualize your options strategy results.
+          </p>
+          <a href="covered-call-tracker" class="feature-btn">View Covered Call Tracker</a>
+        </div>
 
         <div class="feature-card">
           <span class="feature-icon">📰</span>
@@ -621,20 +637,20 @@
           <p style="font-size: 0.9rem; color: #666; margin-bottom: 1.5rem;">These are affiliate/discount links</p>
           <div class="affiliate-links">
             <div class="affiliate-item">
-              <h4>Where I buy</h4>
+              <h4>Where to buy</h4>
               <a href="https://bitcoinwell.com/referral/bitcoinnotcrypto" target="_blank" class="affiliate-link">Bitcoin Well</a>
             </div>
             <div class="affiliate-item">
-              <h4>How I store</h4>
+              <h4>Where to store</h4>
               <a href="https://store.blockstream.com/?code=DTzyNKA5Q8Sz" target="_blank" class="affiliate-link">Blockstream Jade</a>
             </div>
             <div class="affiliate-item">
-              <h4>How I protect</h4>
+              <h4>How to protect</h4>
               <a href="https://www.stampseed.com/" target="_blank" class="affiliate-link">Stamp Seed</a>
               <p class="discount-code">USE CODE: BTCNOTCRYPTO15 for 15% off</p>
             </div>
             <div class="affiliate-item">
-              <h4>How I validate</h4>
+              <h4>How to validate</h4>
               <a href="https://store.start9.com/" target="_blank" class="affiliate-link">Start9</a>
               <p class="discount-code">CODE: BNC5 for 5% off</p>
             </div>
