--- a/press-release.html
+++ b/press-release.html
@@ -288,10 +288,10 @@
           <h1 class="logo">Plebtools</h1>
         </div>
         <div class="nav-links">
-          <a href="home.html">Home</a>
-          <a href="treasury.html">Treasury</a>
-          <a href="btc-buy-tracker.html">Portfolio</a>
-          <a href="press-release.html" class="active">Press Release</a>
+          <a href="home">Home</a>
+          <a href="treasury">Treasury</a>
+          <a href="btc-buy-tracker">Portfolio</a>
+          <a href="covered-call-tracker">Covered Calls</a>
         </div>
       </div>
     </nav>
