Home update added

--- a/home.html
+++ b/home.html
@@ -657,6 +657,7 @@
               <a href="btc-buy-tracker.html">💼 Portfolio</a>
               <a href="coveredcall-tracker.html">📈 Covered Calls</a>
               <a href="compound-interest-calculator.html">💰 Calculator</a>
+              <a href="retirement-calculator.html">🏖️ Retirement</a>
               <a href="btc-loan-ltv.html">🔒 BTC Loans</a>
               <a href="pleb-release.html">📰 Pleb Release</a>
             </div>
@@ -723,6 +724,16 @@
         </div>
 
         <div class="feature-card">
+          <span class="feature-icon">🏖️</span>
+          <h3 class="feature-title">Bitcoin Retirement Calculator</h3>
+          <p class="feature-description">
+            Plan your Bitcoin retirement with detailed calculations. Determine how much Bitcoin 
+            you need to retire based on expenses, inflation, and Bitcoin appreciation rates.
+          </p>
+          <a href="retirement-calculator.html" class="feature-btn">Plan Retirement</a>
+        </div>
+
+        <div class="feature-card">
           <span class="feature-icon">📰</span>
           <h3 class="feature-title">Pleb Release Tool</h3>
           <p class="feature-description">
@@ -732,6 +743,7 @@
           </p>
           <a href="pleb-release.html" class="feature-btn">Create Pleb Release</a>
         </div>
+
 
         <div class="feature-card">
           <span class="feature-icon">🔒</span>
