Some text added

--- a/retirement-calculator.html
+++ b/retirement-calculator.html
@@ -264,7 +264,7 @@
                 <h1 class="calculator-title">Bitcoin Retirement Calculator</h1>
                 <p class="calculator-subtitle">
                     Calculate how much Bitcoin you need to retire based on your expenses, 
-                    inflation, and Bitcoin appreciation assumptions.
+                    inflation, and Bitcoin appreciation assumptions, and how much Bitcoin you want to pass on to your heirs.
                 </p>
             </div>
 
