Update UI consistency improvements and add new features
- Added bitcoin-security.html page
- Added financial-planner.html page
- Added donations tracking with CSV file
- Updated multiple HTML pages for UI consistency
- Modified app.py with backend improvements
- Updated .htaccess configuration
- Removed README.md file

--- a/btc-loan-ltv.html
+++ b/btc-loan-ltv.html
@@ -523,15 +523,17 @@
                 <div class="dropdown" id="toolsDropdown">
                     <button class="dropdown-btn" id="toolsBtn">Tools <span class="dropdown-arrow">▼</span></button>
                     <div class="dropdown-content" id="toolsContent" style="display: none;">
-                        <a href="home.html">🏠 Home</a>
-                        <a href="treasury.html">📊 Treasury</a>
-                        <a href="btc-buy-tracker.html">💼 Portfolio</a>
-                        <a href="coveredcall-tracker.html">📈 Covered Calls</a>
-                        <a href="compound-interest-calculator.html">🧮 Calculator</a>
-                        <a href="pleb-release.html">📰 Pleb Release</a>
+                        <a href="home">🏠 Home</a>
+                        <a href="treasury">📊 Treasury</a>
+                        <a href="btc-buy-tracker">💼 Portfolio</a>
+                        <a href="coveredcall-tracker">📈 Covered Calls</a>
+                        <a href="compound-interest-calculator">🧮 Calculator</a>
+                        <a href="financial-planner">📋 Financial Planner</a>
+                        <a href="bitcoin-security">🛡️ Bitcoin Security</a>
+                        <a href="pleb-release">📰 Pleb Release</a>
                     </div>
                 </div>
-                    <a href="account.html" class="account-link">👤 Account</a>
+                    <a href="account" class="account-link">👤 Account</a>
                 </div>
             </div>
         </nav>
