Privacy analysis added

--- a/home.html
+++ b/home.html
@@ -659,6 +659,7 @@
               <a href="compound-interest-calculator.html">💰 Calculator</a>
               <a href="retirement-calculator.html">🏖️ Retirement</a>
               <a href="btc-loan-ltv.html">🔒 BTC Loans</a>
+              <a href="privacy-analyzer.html">🔍 Privacy Analyzer</a>
               <a href="pleb-release.html">📰 Pleb Release</a>
             </div>
           </div>
@@ -731,6 +732,16 @@
             you need to retire based on expenses, inflation, and Bitcoin appreciation rates.
           </p>
           <a href="retirement-calculator.html" class="feature-btn">Plan Retirement</a>
+        </div>
+
+        <div class="feature-card">
+          <span class="feature-icon">🔍</span>
+          <h3 class="feature-title">Transaction Privacy Analyzer</h3>
+          <p class="feature-description">
+            Analyze Bitcoin transaction privacy using advanced heuristics. Detect wallet clustering, 
+            address reuse, change outputs, and other privacy concerns with detailed risk scoring.
+          </p>
+          <a href="privacy-analyzer.html" class="feature-btn">Analyze Privacy</a>
         </div>
 
         <div class="feature-card">
