Add new donations to treasury chart - Sep 20-23, 2025

--- a/treasury.html
+++ b/treasury.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <title>Plebtools Treasury</title>
   <link rel="icon" type="image/x-icon" href="images/bitcoin retro symbol.jpeg">
-  <link rel="stylesheet" href="styles.css?v=2">
+  <link rel="stylesheet" href="styles.css?v=3">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
   <style>
@@ -902,19 +905,14 @@
     // Donations data from CSV
     const donationsData = [
       {
-        date: "2025-09-15",
-        amount: 0.00000031, // 31 sats converted to BTC
-        description: "Lightning donation - 31 sats"
+        date: "2025-09-13",
+        amount: 0.00000010, // 10 sats converted to BTC
+        description: "Lightning donation - 10 sats"
       },
       {
         date: "2025-09-14",
         amount: 0.00000042, // 42 sats converted to BTC
         description: "Lightning donation - 42 sats"
-      },
-      {
-        date: "2025-09-13", 
-        amount: 0.00000010, // 10 sats converted to BTC
-        description: "Lightning donation - 10 sats"
       },
       {
         date: "2025-09-14",
@@ -925,6 +923,71 @@
         date: "2025-09-14",
         amount: 0.00000007, // 7 sats converted to BTC
         description: "Lightning donation - 7 sats"
+      },
+      {
+        date: "2025-09-14",
+        amount: 0.00000021, // 21 sats converted to BTC
+        description: "Lightning donation - 21 sats"
+      },
+      {
+        date: "2025-09-15",
+        amount: 0.00000010, // 10 sats converted to BTC
+        description: "Lightning donation - 10 sats"
+      },
+      {
+        date: "2025-09-15",
+        amount: 0.00000099, // 99 sats converted to BTC
+        description: "Lightning donation - 99 sats"
+      },
+      {
+        date: "2025-09-15",
+        amount: 0.00000013, // 13 sats converted to BTC
+        description: "Lightning donation from purrsforHer - 13 sats"
+      },
+      {
+        date: "2025-09-16",
+        amount: 0.00000021, // 21 sats converted to BTC
+        description: "Lightning donation - 21 sats"
+      },
+      {
+        date: "2025-09-19",
+        amount: 0.00000021, // 21 sats converted to BTC
+        description: "Lightning donation - 21 sats"
+      },
+      {
+        date: "2025-09-20",
+        amount: 0.00000042, // 42 sats converted to BTC
+        description: "Lightning donation - 42 sats"
+      },
+      {
+        date: "2025-09-21",
+        amount: 0.00000001, // 1 sat converted to BTC
+        description: "Lightning donation - 1 sat"
+      },
+      {
+        date: "2025-09-21",
+        amount: 0.00000011, // 11 sats converted to BTC
+        description: "Lightning donation - 11 sats"
+      },
+      {
+        date: "2025-09-22",
+        amount: 0.00000444, // 444 sats converted to BTC
+        description: "Lightning donation from matteos - 444 sats"
+      },
+      {
+        date: "2025-09-22",
+        amount: 0.00000010, // 10 sats converted to BTC
+        description: "Lightning donation - 10 sats"
+      },
+      {
+        date: "2025-09-23",
+        amount: 0.00000021, // 21 sats converted to BTC
+        description: "Lightning donation - 21 sats"
+      },
+      {
+        date: "2025-09-23",
+        amount: 0.00000021, // 21 sats converted to BTC
+        description: "Lightning donation - 21 sats"
       }
     ];
 
