Added new Bitcoin Storage information page, updated dropdown on existing pages.

--- a/home.html
+++ b/home.html
@@ -661,6 +661,7 @@
               <a href="btc-loan-ltv">🔒 BTC Loans</a>
               <a href="financial-planner">📋 Financial Planner</a>
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
+              <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
               <a href="pleb-release">📰 Pleb Release</a>
             </div>
           </div>
