--- a/btc-loan-ltv.html
+++ b/btc-loan-ltv.html
@@ -530,6 +530,7 @@
                         <a href="compound-interest-calculator">🧮 Calculator</a>
                         <a href="financial-planner">📋 Financial Planner</a>
                         <a href="bitcoin-security">🛡️ Bitcoin Security</a>
+                        <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
                         <a href="pleb-release">📰 Pleb Release</a>
                     </div>
                 </div>
