Finished bitcoin-storage page

--- a/bitcoin-storage.html
+++ b/bitcoin-storage.html
@@ -176,9 +176,11 @@
 
             <!-- Bitcoin Storage Sections -->
             <section class="storage-section">
-                <h1 class="gradient-text" style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">Exchanges</h1>
+                <h1 class="gradient-text" style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">Exchanges
+                </h1>
                 <p style="text-align: center; font-size: 1.2rem; color: #ccc; max-width: 800px; margin: 0 auto;">
-                    Exchanges are a place where you can purchase bitcoin. When you purchase bitcoin on an exchange, they will hold the bitcoin for you.
+                    Exchanges are a place where you can purchase bitcoin. When you purchase bitcoin on an exchange, they
+                    will hold the bitcoin for you.
                     This is not advised due to risks with insolvency, loss of access, and paper bitcoin. When buying
                     from an exchange, you should always withdraw to your own wallet.
                 </p>
@@ -186,37 +188,69 @@
                     <div class="comparison-card">
                         <h3 style="color: #fbbf24;">Centralized Exchanges</h3>
                         <p style="color: #ccc">
-                            Platforms like Coinbase, Shakepay and Kraken. Easy to use, but you don't really own your bitcoin until you withdraw to your own wallet. 
+                            Platforms like Coinbase, Shakepay and Kraken. Easy to use, but you don't really own your
+                            bitcoin until you withdraw to your own wallet.
                         </p>
-                        <img src="images/coinbase-logo.png" style="margin-top: 25px;"width="200" height="200" alt="Coinbase Logo">
+                        <img src="images/coinbase-logo.png" style="margin-top: 25px;" width="200" height="200"
+                            alt="Coinbase Logo">
                     </div>
                     <div class="comparison-card">
                         <h3 style="color: #fbbf24">Decentralized Exchanges</h3>
                         <p style="color: #ccc">
-                            P2P (Peer-to-peer) platforms where you trade directly with others, like RoboSats. You control your funds, but may require more technical knowledge.
+                            P2P (Peer-to-peer) platforms where you trade directly with others, like RoboSats. You
+                            control your funds, but may require more technical knowledge.
                         </p>
-                        <img src="images/robosats.png" style="margin-top: 25px;" width="200" height="200" alt="RoboSats Logo">
+                        <img src="images/robosats.png" style="margin-top: 25px;" width="200" height="200"
+                            alt="RoboSats Logo">
                     </div>
                     <div class="comparison-card">
                         <h3 style="color: #fbbf24">Non-custodial exchanges</h3>
                         <p style="color: #ccc">
-                            Non-custodial exchanges take payment and send bitcoin directly to your wallet address. Bitcoin Well is an example of a non-custodial exchange.
+                            Non-custodial exchanges take payment and send bitcoin directly to your wallet address.
+                            Bitcoin Well is an example of a non-custodial exchange.
                         </p>
-                        <img src="images/bitcoinwell.png" style="margin-top: 25px;" width="200" height="200" alt="Bitcoin Well Logo">
+                        <img src="images/bitcoinwell.png" style="margin-top: 25px;" width="200" height="200"
+                            alt="Bitcoin Well Logo">
                     </div>
                 </div>
             </section>
             <section class="storage-section">
-                <h1 class="gradient-text" style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">Hot vs Cold Storage</h1>
+                <h1 class="gradient-text" style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">Hot vs Cold
+                    Storage</h1>
                 <p style="text-align: center; font-size: 1.2rem; color: #ccc; max-width: 800px; margin: 0 auto;">
-                    Now that you've decided to take your bitcoin off of the exchange, what wallet should you pick? People talk about cold storage vs hot wallets, what are the actual differences?<br><br>
-                    Hot Wallets are bitcoin wallets where the keys are kept on a device connected to the internet. For example, if you create a new wallet with Sparrow, the keys will be stored on the computer you create it on. <br><br>
-                    Cold wallets are wallets where the keys are kept offline. You can use a designated hardware wallet for this, or even an air gapped computer with no internet connection.
-                </p>    
+                    Now that you've decided to take your bitcoin off of the exchange, what wallet should you pick?
+                    People talk about cold storage vs hot wallets, what are the actual differences?
+                </p>
+                <div class="comparison-grid">
+                    <div class="comparison-card">
+                        <h3 style="color: #fbbf24">Hot Wallets</h3> <br>
+                        <p style="color: #ccc">Hot Wallets are bitcoin wallets where the keys are kept on a device
+                            connected to the internet. For example, if you create a new wallet with Sparrow, the keys
+                            will be stored on the device you create it on. Hot wallets are useful for everyday spending,
+                            like carrying cash in a physical wallet.</p>
+                    </div>
+                    <div class="comparison-card">
+                        <h3 style="color: #fbbf24">Cold Wallets</h3> <br>
+                        <p style="color: #ccc">
+                            Cold wallets are wallets where the keys are kept offline. You can use a designated hardware
+                            wallet
+                            for this, or even an air gapped computer with no internet connection. Cold wallets are like
+                            a vault for your savings.
+                        </p>
+                    </div>
+                </div>
             </section>
             <section class="storage-section">
-                <h1 class="gradient-text" style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">Hardware Wallets</h1>
-                <p></p>
+                <h1 class="gradient-text" style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">Hardware
+                    Wallets</h1>
+                <p style="text-align: center; font-size: 1.2rem; color: #ccc; max-width: 800px; margin: 0 auto;">
+                    Hardware wallets are dedicated devices that keep your private keys offline for strong protection
+                    against hacks and malware. <br>
+                    A key consideration when choosing a hardware wallet is making sure the firmware is bitcoin-only.
+                    This can reduce the points of attack if someone attempts to steal your keys. <br> <br>
+                    Popular brands include the Blockstream Jade (affiliate link below), the Trezor Safe 3/5
+                    (bitcoin-only edition), and the Coldcard Q/Mk4.
+                </p>
             </section>
 
             <!-- Affiliate Links Section -->
@@ -230,7 +264,8 @@
                             <div class="affiliate-item">
                                 <h4>Where to buy</h4><a href="https://bitcoinwell.com/referral/bitcoinnotcrypto"
                                     target="_blank" class="affiliate-link">Bitcoin Well</a>
-                                    <a href="https://shakepay.me/r/FNQHGTN" target="_blank" class="affiliate-link">Shakepay</a>
+                                <a href="https://shakepay.me/r/FNQHGTN" target="_blank"
+                                    class="affiliate-link">Shakepay</a>
                             </div>
                             <div class="affiliate-item">
                                 <h4>Where to store</h4><a href="https://store.blockstream.com/?code=DTzyNKA5Q8Sz"
@@ -245,7 +280,8 @@
                                 <h4>How to validate</h4><a href="https://store.start9.com/" target="_blank"
                                     class="affiliate-link">Start9</a>
                                 <p class="discount-code">CODE: BNC5 for 5% off</p>
-                                <a href="https://www.solosatoshi.com/aff/2279/" target="_blank" class="affiliate-link">Buy a BitAxe</a>
+                                <a href="https://www.solosatoshi.com/aff/2279/" target="_blank"
+                                    class="affiliate-link">Buy a BitAxe</a>
                             </div>
                             <div class="affiliate-item">
                                 <h4>1:1 Coaching</h4><a href="https://www.differentmedia.ca/bitcoin1-1" target="_blank"
